<resources>
    <string name="app_name">Offered</string>

    <string name="hint_donor_name">Donor Name</string>
    <string name="hint_donation_amount">Donation Amount</string>
    <string name="text_rupee_symbol">₹</string>
    <string name="placeholder_total_donated_amount">0</string>
    <string name="text_view_all_donors">View All Donors</string>

    <string name="toolbar_title_make_donations_activity">Offered</string>
    <string name="toolbar_title_view_donations_activity">All Donors</string>

    <string name="message_no_details_typed">Please type all required details</string>
    <string name="message_no_donations_exist">There are no donations yet</string>

    <string name="text_donor_name">Danyl Fernandes</string>
    <string name="text_donation_amount">100</string>

</resources>
