<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.make.MakeDonationActivity">

    <include android:id="@+id/mToolbar" layout="@layout/app_toolbar"/>

    <TextView
        android:id="@+id/tvRupeeSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_rupee_symbol"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/tilDonorName"
        app:layout_constraintEnd_toStartOf="@+id/tvTotalDonatedAmount"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <TextView
        android:id="@+id/tvTotalDonatedAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/work_sans"
        android:text="@string/placeholder_total_donated_amount"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@+id/tilDonorName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLinkToAllDonors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/work_sans_medium"
        android:text="@string/text_view_all_donors"
        android:textColor="@color/textViewLinkColor"
        app:layout_constraintBottom_toTopOf="@+id/tilDonorName"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDonorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:boxBackgroundColor="@android:color/white"
        app:boxBackgroundMode="outline"
        app:layout_constraintBottom_toTopOf="@id/tilDonationAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDonorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans"
            android:hint="@string/hint_donor_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDonationAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:boxBackgroundColor="@android:color/white"
        app:boxBackgroundMode="outline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivAddToTotalAmount"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDonationAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans"
            android:hint="@string/hint_donation_amount"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ivAddToTotalAmount"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="?attr/selectableItemBackground"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_circle" />


</androidx.constraintlayout.widget.ConstraintLayout>